[gd_scene load_steps=6 format=3 uid="uid://b4f6xm8laj2n1"]

[ext_resource type="Script" uid="uid://dbr8mlkmbumjc" path="res://scripts/TabNavigator.gd" id="1_tab_nav"]
[ext_resource type="PackedScene" uid="uid://ck2nav7x8n4p5" path="res://scenes/GenerationPanel.tscn" id="2_gen_panel"]
[ext_resource type="PackedScene" uid="uid://b8n7q3xar5k1d" path="res://scenes/ProductionPanel.tscn" id="3_prod_panel"]
[ext_resource type="PackedScene" uid="uid://fb6y40vg13a1" path="res://scenes/SalesPanel.tscn" id="4_sales_panel"]
[ext_resource type="PackedScene" uid="uid://c1m7r8y4v6n2s" path="res://scenes/CustomersPanel.tscn" id="5_customers_panel"]

[node name="TabNavigator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tab_nav")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PauseButton" type="Button" parent="MainContainer/TopPanel"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "‚è∏Ô∏è"

[node name="SaveMenuButton" type="MenuButton" parent="MainContainer/TopPanel"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "üíæ Guardado"

[node name="CurrencyContainer" type="HBoxContainer" parent="MainContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ContentContainer" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GenerationPanel" type="Control" parent="MainContainer/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GenerationPanelInstance" parent="MainContainer/ContentContainer/GenerationPanel" instance=ExtResource("2_gen_panel")]
layout_mode = 1

[node name="ProductionPanel" type="Control" parent="MainContainer/ContentContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProductionPanelInstance" parent="MainContainer/ContentContainer/ProductionPanel" instance=ExtResource("3_prod_panel")]
layout_mode = 1

[node name="SalesPanel" type="Control" parent="MainContainer/ContentContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SalesPanelInstance" parent="MainContainer/ContentContainer/SalesPanel" instance=ExtResource("4_sales_panel")]
layout_mode = 1

[node name="CustomersPanel" type="Control" parent="MainContainer/ContentContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CustomersPanelInstance" parent="MainContainer/ContentContainer/CustomersPanel" instance=ExtResource("5_customers_panel")]
layout_mode = 1

[node name="BottomNavigation" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="GenerationTab" type="Button" parent="MainContainer/BottomNavigation"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
toggle_mode = true
button_pressed = true
text = "üè≠ GENERACI√ìN"

[node name="ProductionTab" type="Button" parent="MainContainer/BottomNavigation"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "‚öíÔ∏è PRODUCCI√ìN"

[node name="SalesTab" type="Button" parent="MainContainer/BottomNavigation"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "üí∞ VENTAS"

[node name="CustomersTab" type="Button" parent="MainContainer/BottomNavigation"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
toggle_mode = true
text = "üë• CLIENTES"
